--- a/server/java/src/main/resources/static/index.html
+++ b/server/java/src/main/resources/static/index.html
@@ -9,25 +9,31 @@
 
 <body>
 
-    <main>
+<main>
 
-        <div class="screen active" id="loginScreen">
+    <div class="screen active" id="loginScreen">
 
-            <form id="login" method="post">
+        <form id="login" method="post">
 
-                <h2>Login</h2>
-                <input type="email" name="email" id="email" required>
-                <input type="password" name ="password" id = "password" required>
+            <h2>Login</h2>
+            <label for="email"></label><input type="email" name="email" id="email" required>
+            <label for="password"></label><input type="password" name="password" id="password" required>
+            <div class = "flex-box">
                 <input type="submit" value="Login">
+                <a href="/register">Register</a>
+            </div>
 
-            </form>
 
-        </div>
+        </form>
 
-    </main>
+    </div>
 
-    <script src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM=" crossorigin="anonymous"></script>
-    <script src="js/script.js" type="text/javascript"></script>
+</main>
+
+<script src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM="
+        crossorigin="anonymous"></script>
+<script src="js/script.js" type="text/javascript"></script>
+<script src="js/login.js" type="text/javascript"></script>
 </body>
 
 </html>
