--- a/server/java/src/main/resources/static/index.html
+++ b/server/java/src/main/resources/static/index.html
@@ -1,39 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
     <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/grid.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 </head>
-
 <body>
 
 <main>
 
-    <div class="screen active" id="loginScreen">
+    <div class="row">
 
-        <form id="login" method="post">
+        <div id="sidebar">
+            <div class="sidebarElement" id="burger"><i class="fa-solid fa-bars"></i></div>
+            <div class="sidebarElement" id="schedule"><p>Schedule</p><i class="fa-regular fa-calendar-days"></i></div>
+            <div class="sidebarElement" id="dispense"><p>Feed</p><i class="fa-solid fa-bowl-rice"></i></div>
+            <div class="sidebarElement" id="settings"><p>Settings</p><i class="fa-solid fa-gear"></i></div>
+        </div>
 
-            <h2>Login</h2>
-            <label for="email"></label><input type="email" name="email" id="email" required>
-            <label for="password"></label><input type="password" name="password" id="password" required>
-            <div class = "flex-box">
-                <input type="submit" value="Login">
-                <a href="/register">Register</a>
+        <div id="screen">
+
+            <div id="mainScreen" class="screen active">
+                <div class="screenHeading"><h2>Main</h2></div>
+            </div>
+            <div id="scheduleScreen" class="screen">
+                <div class="screenHeading"><h2>Schedule</h2></div>
+                <div class="screenMain"></div>
+            </div>
+            <div id="dispenseScreen" class="screen">
+                <div class="screenHeading"><h2>Feed</h2></div>
+                <div class="screenMain"><label for="amount">Amount:</label><input type="number" name="amount" id="amount">
+                    <select class = "feederSelect"></select>
+                    <input type="button" value="Feed" id = "feedButton">
+                </div>
+            </div>
+            <div id="settingsScreen" class="screen">
+                <div class="screenHeading"><h2>Settings</h2></div>
             </div>
 
 
-        </form>
+        </div>
 
     </div>
 
 </main>
-
 <script src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM="
         crossorigin="anonymous"></script>
+<script src="js/lib.js" type="text/javascript"></script>
 <script src="js/script.js" type="text/javascript"></script>
-<script src="js/login.js" type="text/javascript"></script>
 </body>
-
 </html>
