--- a/server/java/src/main/resources/static/login.html
+++ b/server/java/src/main/resources/static/login.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="css/grid.css">
 </head>
 
@@ -12,15 +13,16 @@
 
 <main>
 
-    <div class="screen active" id="registerScreen">
+    <div class="screen active" id="loginScreen">
 
-        <form id="register" method="post">
+        <form id="login" method="post">
 
-            <h2>Register</h2>
+            <h2>Login</h2>
             <label for="email"></label><input type="email" name="email" id="email" required>
             <label for="password"></label><input type="password" name="password" id="password" required>
             <div class = "flex-box">
-                <input type="submit" value="Register">
+                <input type="submit" value="Login">
+                <a href="/register">Register</a>
             </div>
 
 
@@ -33,7 +35,7 @@
 <script src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM="
         crossorigin="anonymous"></script>
 <script src="js/lib.js" type="text/javascript"></script>
-<script src="js/register.js" type="text/javascript"></script>
+<script src="js/login.js" type="text/javascript"></script>
 </body>
 
 </html>
