--- a/server/java/src/main/resources/static/index.html
+++ b/server/java/src/main/resources/static/index.html
@@ -27,25 +27,40 @@
             </div>
             <div id="scheduleScreen" class="screen">
                 <div class="screenHeading"><h2>Schedule</h2></div>
-                <div class="screenMain"></div>
+                <div class="screenMain">
+
+                    <div id="calender">
+                        <div class="weekday" id="monday"></div>
+                        <div class="weekday" id="tuesday"></div>
+                        <div class="weekday" id="wednesday"></div>
+                        <div class="weekday" id="thursday"></div>
+                        <div class="weekday" id="friday"></div>
+                        <div class="weekday" id="saturday"></div>
+                        <div class="weekday" id="sunday"></div>
+                        <div id="scheduleControls">
+
+                            <label for=scheduleSelect></label><select class="feederSelect" id = scheduleSelect></select>
+                            <input type="button" value="Set Schedule">
+                        </div>
+                    </div>
+                </div>
             </div>
             <div id="dispenseScreen" class="screen">
                 <div class="screenHeading"><h2>Feed</h2></div>
-                <div class="screenMain"><label for="amount">Amount:</label><input type="number" name="amount" id="amount">
-                    <select class = "feederSelect"></select>
-                    <input type="button" value="Feed" id = "feedButton">
+                <div class="screenMain"><label for="dispenseAmount">Amount:</label><input type="number" name="amount"
+                                                                                          id="dispenseAmount">
+                    <label for="dispenseSelect"></label><select id="dispenseSelect" class="feederSelect"></select>
+                    <input type="button" value="Feed" id="feedButton">
                 </div>
             </div>
             <div id="settingsScreen" class="screen">
                 <div class="screenHeading"><h2>Settings</h2></div>
             </div>
-
-
         </div>
-
     </div>
 
 </main>
+
 <script src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM="
         crossorigin="anonymous"></script>
 <script src="js/lib.js" type="text/javascript"></script>
