Now the schedule is actually displayed in the schedule tab

--- a/server/java/src/main/resources/static/index.html
+++ b/server/java/src/main/resources/static/index.html
@@ -30,13 +30,13 @@
                 <div class="screenMain">
 
                     <div id="calender">
-                        <div class="weekday" id="monday"></div>
-                        <div class="weekday" id="tuesday"></div>
-                        <div class="weekday" id="wednesday"></div>
-                        <div class="weekday" id="thursday"></div>
-                        <div class="weekday" id="friday"></div>
-                        <div class="weekday" id="saturday"></div>
-                        <div class="weekday" id="sunday"></div>
+                        <div class="weekday" id="monday"><h2>Monday</h2><div class="dayTasks"></div></div>
+                        <div class="weekday" id="tuesday"><h2>Tuesday</h2><div class="dayTasks"></div></div>
+                        <div class="weekday" id="wednesday"><h2>Wednesday</h2><div class="dayTasks"></div></div>
+                        <div class="weekday" id="thursday"><h2>Thursday</h2><div class="dayTasks"></div></div>
+                        <div class="weekday" id="friday"><h2>Friday</h2><div class="dayTasks"></div></div>
+                        <div class="weekday" id="saturday"><h2>Saturday</h2><div class="dayTasks"></div></div>
+                        <div class="weekday" id="sunday"><h2>Sunday</h2><div class="dayTasks"></div></div>
                         <div id="scheduleControls">
 
                             <label for=scheduleSelect></label><select class="feederSelect" id = scheduleSelect></select>
