this commit will make the frontend able to set the schedule

--- a/server/java/src/main/resources/static/index.html
+++ b/server/java/src/main/resources/static/index.html
@@ -41,7 +41,7 @@
                         <div id="scheduleControls">
 
                             <label for=scheduleSelect></label><select class="feederSelect" id = scheduleSelect></select>
-                            <input type="button" value="Set Schedule">
+                            <input type="button" value="Set Schedule" id ="setSchedule">
                         </div>
                     </div>
                 </div>
