Now tasks can be deleted too and some styling changes

--- a/server/java/src/main/resources/static/index.html
+++ b/server/java/src/main/resources/static/index.html
@@ -15,9 +15,10 @@
 
         <div id="sidebar">
             <div class="sidebarElement" id="burger"><i class="fa-solid fa-bars"></i></div>
-            <div class="sidebarElement" id="schedule"><p>Schedule</p><i class="fa-regular fa-calendar-days"></i></div>
-            <div class="sidebarElement" id="dispense"><p>Feed</p><i class="fa-solid fa-bowl-rice"></i></div>
-            <div class="sidebarElement" id="settings"><p>Settings</p><i class="fa-solid fa-gear"></i></div>
+            <div class="sidebarElement" id="main"><i class="fa-solid fa-house"></i></div>
+            <div class="sidebarElement" id="schedule"><i class="fa-regular fa-calendar-days"></i></div>
+            <div class="sidebarElement" id="dispense"><i class="fa-solid fa-bowl-rice"></i></div>
+            <div class="sidebarElement" id="settings"><i class="fa-solid fa-gear"></i></div>
         </div>
 
         <div id="screen">
@@ -31,13 +32,13 @@
 
 
                     <div id="calender">
-                        <div class="weekday" id="monday"><h2>Monday</h2><div class="dayTasks"></div></div>
-                        <div class="weekday" id="tuesday"><h2>Tuesday</h2><div class="dayTasks"></div></div>
-                        <div class="weekday" id="wednesday"><h2>Wednesday</h2><div class="dayTasks"></div></div>
-                        <div class="weekday" id="thursday"><h2>Thursday</h2><div class="dayTasks"></div></div>
-                        <div class="weekday" id="friday"><h2>Friday</h2><div class="dayTasks"></div></div>
-                        <div class="weekday" id="saturday"><h2>Saturday</h2><div class="dayTasks"></div></div>
-                        <div class="weekday" id="sunday"><h2>Sunday</h2><div class="dayTasks"></div></div>
+                        <div class="weekday" id="monday"><h2>Monday</h2><div class="dayTasks"></div><i class="fa-solid fa-plus addTask"></i></div>
+                        <div class="weekday" id="tuesday"><h2>Tuesday</h2><div class="dayTasks"></div><i class="fa-solid fa-plus addTask"></i></div>
+                        <div class="weekday" id="wednesday"><h2>Wednesday</h2><div class="dayTasks"></div><i class="fa-solid fa-plus addTask"></i></div>
+                        <div class="weekday" id="thursday"><h2>Thursday</h2><div class="dayTasks"></div><i class="fa-solid fa-plus addTask"></i></div>
+                        <div class="weekday" id="friday"><h2>Friday</h2><div class="dayTasks"></div><i class="fa-solid fa-plus addTask"></i></div>
+                        <div class="weekday" id="saturday"><h2>Saturday</h2><div class="dayTasks"></div><i class="fa-solid fa-plus addTask"></i></div>
+                        <div class="weekday" id="sunday"><h2>Sunday</h2><div class="dayTasks"></div><i class="fa-solid fa-plus addTask"></i></div>
                         <div id="scheduleControls">
 
                             <label for=scheduleSelect></label><select class="feederSelect" id = scheduleSelect></select>
